<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailActivity">

    <ImageView
        android:id="@+id/ivMovie"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/my_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="220dp"
        android:elevation="8dp"
        app:cardCornerRadius="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/movie_item_detail"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="@string/my_text_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/movie_overview"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvMovieOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textStyle="italic"
                tools:text="@string/my_text_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/movie_score"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:id="@+id/viewScore"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/movie_score" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    style="@style/MovieSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/movie_vote_average"
                    android:textSize="11sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>